external-crates/move/crates/move-compiler/tests/move_2024/typing/unused_macro_arg_affects_inference.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04010]: cannot infer type
   ┌─ tests/move_2024/typing/unused_macro_arg_affects_inference.move:14:9
   │
14 │         X().foo!(None())
   │         ^^^ Could not infer this type. Try adding an annotation

warning[W09005]: dead or unreachable code
   ┌─ tests/move_2024/typing/unused_macro_arg_affects_inference.move:14:18
   │
14 │         X().foo!(None())
   │                  ^^^^^^ Unused macro argument. Its expression will not be type checked and it will not evaluated
   │
   = This warning can be suppressed with '#[allow(dead_code)]' applied to the 'module' or module member ('const', 'fun', or 'struct')
